crates/baml-bridge/tests/ui/serde_untagged.stderr
error: serde(untagged) is not supported; hint: use #[baml(tag = "...")] for data enums
 --> tests/ui/serde_untagged.rs:4:9
  |
4 | #[serde(untagged)]
  |         ^^^^^^^^
